2012-05-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.5
	* Version 1.5.5 released

2012-04-17  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Yseasstat: changed timestamp of DJF season to last timestep of February

2012-04-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ml2pl: added support for GRIB2 parameter names [Bug #2252]

2012-03-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* pipeInqVlist: changed init of time_to_wait [Bug #2133]

2012-03-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: removed debug output [report: K. Houchi]

2012-03-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_rr1: missing value not set correctly (bug fix) [report: Hans-Juergen Panitz]
	* ecacore: fix all missing values

2012-02-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* geopotheight: added support for WMO code table

2012-02-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New module: Yhourarith (yhouradd, yhoursub, yhourmul, yhourdiv) [request: Beate Gayer]

2012-02-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* mergetime: added env. SKIP_SAME_TIME to skip all double entries of the same timestamp [request: K. Houchi]
	* Added operator rohpot - potential density for MPIOM (experimental) [request: Helmut Haak]

2012-01-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.4
	* Version 1.5.4 released

2012-01-24  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapcon: added env REMAP_AREA_MIN, to set the minimum area fraction [request: Gernot Geppert]

2012-01-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplaf: using binary search (speedup)
	* Timstepstat: added support for time bounds

2012-01-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplib: use grid2_bound_box only for conservativ remapping

2012-01-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* setgridtype: added support for grid type lonlat

2012-01-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
